--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <div>
-        hello github page
+            1.创建github账号；
+            2.创建github page；
+            3.复制github的clone路径（不是网址路径）
+            4.使用git clone https://github.com/chenyiED/chenyied.github.io.git  下载仓库资源
+            5.将项目代码放入下载下来的资源文件中 chenyied.github.io
+            6. git add .
+            7. git commit -m “上传网站源码到github”
+            8. git push 提交
     </div>
 </body>
 </html>
