“上传网站源码到github”

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 </head>
 <body>
     <div>
-            1.创建github账号；
-            2.创建github page；
-            3.复制github的clone路径（不是网址路径）
-            4.使用git clone https://github.com/chenyiED/chenyied.github.io.git  下载仓库资源
-            5.将项目代码放入下载下来的资源文件中 chenyied.github.io
-            6. git add .
-            7. git commit -m “上传网站源码到github”
-            8. git push 提交
+            1.创建github账号；<br />
+            2.创建github page；<br />
+            3.复制github的clone路径（不是网址路径）<br />
+            4.使用git clone https://github.com/chenyiED/<br />chenyied.github.io.git  下载仓库资源<br />
+            5.将项目代码放入下载下来的资源文件中 chenyied.github.io<br />
+            6. git add .<br />
+            7. git commit -m “上传网站源码到github”<br />
+            8. git push 提交<br />
     </div>
 </body>
 </html>
