--- a/index.html
+++ b/index.html
@@ -2,11 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>我的博客</title>
+    <!-- <title>我的博客</title> -->
     <link rel="stylesheet" type="text/css" href="css/global.css">
 </head>
 <body>
     <div>
+            <p>若是新用户，需要先在cmd下执行下面两句代码：</p>
+            <p>git config --global user.email "you@example.com"</p>
+            <p>git config --global user.name "Your Name"</p>
+
             1.创建github账号；<br />
             2.创建github page；<br />
             3.复制github的clone路径（不是网址路径）<br />
