--- a/newslistpic.html
+++ b/newslistpic.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="gb2312">
+<meta charset="utf-8">
 <title>个人博客模板古典系列之——江南墨卷</title>
 <meta name="keywords" content="个人博客模板古典系列之——江南墨卷" />
 <meta name="description" content="个人博客模板古典系列之——江南墨卷" />
@@ -100,7 +100,7 @@ window.onload = function ()
 			$(this).find('ul:first').css({visibility: "hidden"});
 		});
 	});
-</SCRIPT> 
+</SCRIPT>
   </div>
 </header>
 <div class="container">
@@ -130,7 +130,7 @@ window.onload = function ()
         </li>
         <li>
           <div class="dttext">
-           
+
             <ul>
               <h2><a href="/">个人博客模板古典系列之——江南墨卷</a></h2>
               <p>个人博客模板古典系列之——江南墨卷个人博客模板古典系列之——江南墨卷个人博客模板古典系列之——江南墨卷原汁原味重现经典....</p>
@@ -154,7 +154,7 @@ window.onload = function ()
   </div>
   <div class="blank"></div>
   <!-- container代码 结束 -->
- </div> 
+ </div>
   <footer>
     <div class="footer">
       <div class="f_l">
