--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>¸öÈË²©¿ÍÄ£°å¹ÅµäÏµÁĞÖ®¡ª¡ª½­ÄÏÄ«¾í</title>
-<meta name="keywords" content="¸öÈË²©¿ÍÄ£°å¹ÅµäÏµÁĞÖ®¡ª¡ª½­ÄÏÄ«¾í" />
-<meta name="description" content="¸öÈË²©¿ÍÄ£°å¹ÅµäÏµÁĞÖ®¡ª¡ª½­ÄÏÄ«¾í" />
+<title>ä¸ªäººåšå®¢æ¨¡æ¿å¤å…¸ç³»åˆ—ä¹‹â€•â€•æ±Ÿå—å¢¨å·</title>
+<meta name="keywords" content="ä¸ªäººåšå®¢æ¨¡æ¿å¤å…¸ç³»åˆ—ä¹‹â€•â€•æ±Ÿå—å¢¨å·" />
+<meta name="description" content="ä¸ªäººåšå®¢æ¨¡æ¿å¤å…¸ç³»åˆ—ä¹‹â€•â€•æ±Ÿå—å¢¨å·" />
 <link href="css/base.css" rel="stylesheet">
 <link href="css/main.css" rel="stylesheet">
 <link href="css/m.css" rel="stylesheet">
@@ -17,28 +17,29 @@
 <script>
 window.onload = function ()
 {
-	var oH2 = document.getElementsByTagName("h2")[0];
-	var oUl = document.getElementsByTagName("ul")[0];
-	oH2.onclick = function ()
-	{
-		var style = oUl.style;
-		style.display = style.display == "block" ? "none" : "block";
-		oH2.className = style.display == "block" ? "open" : ""
-	}
+
+  var oH2 = document.getElementsByTagName("h2")[0];
+  var oUl = document.getElementsByTagName("ul")[0];
+  oH2.onclick = function ()
+  {
+    var style = oUl.style;
+    style.display = style.display == "block" ? "none" : "block";
+    oH2.className = style.display == "block" ? "open" : ""
+  }
 }
 </script>
 <div id="wrapper">
   <header>
     <div class="headtop"></div>
     <div class="contenttop">
-      <div class="logo f_l">½­ÄÏÄ«¾í</div>
+      <div class="logo f_l">æ±Ÿå—å¢¨å·</div>
       <div class="search f_r">
         <form action="/e/search/index.php" method="post" name="searchform" id="searchform">
-          <input name="keyboard" id="keyboard" class="input_text" value="ÇëÊäÈë¹Ø¼ü×Ö" style="color: rgb(153, 153, 153);" onfocus="if(value=='ÇëÊäÈë¹Ø¼ü×Ö'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#999';value='ÇëÊäÈë¹Ø¼ü×Ö'}" type="text">
+          <input name="keyboard" id="keyboard" class="input_text" value="è¯·è¾“å…¥å…³é”®å­—" style="color: rgb(153, 153, 153);" onfocus="if(value=='è¯·è¾“å…¥å…³é”®å­—'){this.style.color='#000';value=''}" onblur="if(value==''){this.style.color='#999';value='è¯·è¾“å…¥å…³é”®å­—'}" type="text">
           <input name="show" value="title" type="hidden">
           <input name="tempid" value="1" type="hidden">
           <input name="tbname" value="news" type="hidden">
-          <input name="Submit" class="input_submit" value="ËÑË÷" type="submit">
+          <input name="Submit" class="input_submit" value="æœç´¢" type="submit">
         </form>
       </div>
       <div class="blank"></div>
@@ -46,97 +47,97 @@ window.onload = function ()
       <div id="mnav">
     <h2><span class="navicon"></span></h2>
     <ul>
-      <li><a href="/">ÍøÕ¾Ê×Ò³</a></li>
-      <li><a href="/about.html">¹ØÓÚÎÒ</a></li>
-      <li><a href="/download/">Ä£°å·ÖÏí</a>
+      <li><a href="/">ç½‘ç«™é¦–é¡µ</a></li>
+      <li><a href="/about.html">å…³äºæˆ‘</a></li>
+      <li><a href="/download/">æ¨¡æ¿åˆ†äº«</a>
          <ul>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
           </ul>
         </li>
-      <li><a href="/jstt/">Ñ§ÎŞÖ¹¾³</a>
+      <li><a href="/jstt/">å­¦æ— æ­¢å¢ƒ</a>
             <ul>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
           </ul></li>
-      <li><a href="/news/">ÂıÉú»î</a>
+      <li><a href="/news/">æ…¢ç”Ÿæ´»</a>
             <ul>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
-         <li><a href="#.html">¹ØÓÚÎÒ</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
+         <li><a href="#.html">å…³äºæˆ‘</a></li>
           </ul></li>
-      <li><a href="/e/tool/gbook/?bid=3">ÁôÑÔ</a></li>
+      <li><a href="/e/tool/gbook/?bid=3">ç•™è¨€</a></li>
     </ul>
   </div>
 
       <nav>
         <div  class="navigation">
           <ul class="menu">
-            <li><a href="index.html">ÍøÕ¾Ê×Ò³</a></li>
-            <li><a href="#">¹ØÓÚÎÒ</a>
+            <li><a href="index.html">ç½‘ç«™é¦–é¡µ</a></li>
+            <li><a href="#">å…³äºæˆ‘</a>
               <ul>
-                <li><a href="about.html">¸öÈË¼ò½é</a></li>
-                <li><a href="listpic.html">¸öÈËÏà²á</a></li>
+                <li><a href="about.html">ä¸ªäººç®€ä»‹</a></li>
+                <li><a href="listpic.html">ä¸ªäººç›¸å†Œ</a></li>
               </ul>
             </li>
-            <li><a href="#">ÎÒµÄÈÕ¼Ç</a>
+            <li><a href="#">æˆ‘çš„æ—¥è®°</a>
               <ul>
-                <li><a href="newslistpic.html">¸öÈËÈÕ¼Ç</a></li>
-                <li><a href="newslistpic.html">Ñ§Ï°±Ê¼Ç</a></li>
+                <li><a href="newslistpic.html">ä¸ªäººæ—¥è®°</a></li>
+                <li><a href="newslistpic.html">å­¦ä¹ ç¬”è®°</a></li>
               </ul>
             </li>
-            <li><a href="newslistpic.html">¼¼ÊõÎÄÕÂ</a> </li>
-            <li><a href="#">¸øÎÒÁôÑÔ</a> </li>
+            <li><a href="newslistpic.html">æŠ€æœ¯æ–‡ç« </a> </li>
+            <li><a href="#">ç»™æˆ‘ç•™è¨€</a> </li>
           </ul>
         </div>
       </nav>
       <SCRIPT type=text/javascript>
-	// Navigation Menu
-	$(function() {
-		$(".menu ul").css({display: "none"}); // Opera Fix
-		$(".menu li").hover(function(){
-			$(this).find('ul:first').css({visibility: "visible",display: "none"}).slideDown("normal");
-		},function(){
-			$(this).find('ul:first').css({visibility: "hidden"});
-		});
-	});
+  // Navigation Menu
+  $(function() {
+    $(".menu ul").css({display: "none"}); // Opera Fix
+    $(".menu li").hover(function(){
+      $(this).find('ul:first').css({visibility: "visible",display: "none"}).slideDown("normal");
+    },function(){
+      $(this).find('ul:first').css({visibility: "hidden"});
+    });
+  });
 </SCRIPT>
     </div>
   </header>
   <div class="container">
     <div class="con_content">
       <div class="about_box">
-        <h2 class="nh1"><span>ÄúÏÖÔÚµÄÎ»ÖÃÊÇ£º<a href="/" target="_blank">ÍøÕ¾Ê×Ò³</a>>><a href="#" target="_blank">ĞÅÏ¢ä¯ÀÀ</a></span><b>¸öÈË¼ò½é</b></h2>
+        <h2 class="nh1"><span>æ‚¨ç°åœ¨çš„ä½ç½®æ˜¯ï¼š<a href="/" target="_blank">ç½‘ç«™é¦–é¡µ</a>>><a href="#" target="_blank">ä¿¡æ¯æµè§ˆ</a></span><b>ä¸ªäººç®€ä»‹</b></h2>
         <div class="f_box">
-          <p class="a_title">¸öÈË¼ò½é</p>
+          <p class="a_title">ä¸ªäººç®€ä»‹</p>
           <p class="p_title"></p>
-          <!--  <p class="box_p"><span>·¢²¼Ê±¼ä£º2017-07-07 15:12:42</span><span>×÷Õß£ºÌÆĞ¢ÎÄ</span><span>À´Ô´£º»ü²éÖ§¶Ó</span><span>µã»÷£º111056</span></p>-->
-          <!-- ¿ÉÓÃÓÚÄÚÈİÄ£°å -->
+          <!--  <p class="box_p"><span>å‘å¸ƒæ—¶é—´ï¼š2017-07-07 15:12:42</span><span>ä½œè€…ï¼šå”å­æ–‡</span><span>æ¥æºï¼šç¨½æŸ¥æ”¯é˜Ÿ</span><span>ç‚¹å‡»ï¼š111056</span></p>-->
+          <!-- å¯ç”¨äºå†…å®¹æ¨¡æ¿ -->
         </div>
         <ul class="about_content">
-          <p> ÈËÉú¾ÍÊÇÒ»¸öµÃÓëÊ§µÄ¹ı³Ì£¬¶øÎÒÈ´ÊÇÒ»¸öĞÒÔËÕß£¬µÃµ½µÄÓÀÔ¶±ÈÊ§È¥µÄ¶à¡£Éú»îµÄÑ¹Á¦ÆÈÊ¹ÎÒ·ÅÆúÁËÇáËÉµÄÇ°Ì¨½Ó´ı£¬·ÅÆúÁËÌåÃæµÄ±à¼­£¬»»À´ËäÓĞĞ©ÅîÍ·¹¸ÃæµÄ¹¤×÷£¬µ«ÊÇÎÒÈÔÈ»ºÜÏíÊÜÄÇĞ©°¾µÃÖ»Ê£ÏÂºÚÑÛÈ¦µÄÈÕ×Ó£¬ÒòÎªÎÒÔÚÑ§Ï°Ê¹ÓÃPhotoshop¡¢Flash¡¢Dreamweaver¡¢ASP¡¢PHP¡¢JSP...ÖĞ¼¤·¢ÁËĞËÈ¤£¬È»ºóÔ½×ßÔ½Ô¶....</p>
+          <p> äººç”Ÿå°±æ˜¯ä¸€ä¸ªå¾—ä¸å¤±çš„è¿‡ç¨‹ï¼Œè€Œæˆ‘å´æ˜¯ä¸€ä¸ªå¹¸è¿è€…ï¼Œå¾—åˆ°çš„æ°¸è¿œæ¯”å¤±å»çš„å¤šã€‚ç”Ÿæ´»çš„å‹åŠ›è¿«ä½¿æˆ‘æ”¾å¼ƒäº†è½»æ¾çš„å‰å°æ¥å¾…ï¼Œæ”¾å¼ƒäº†ä½“é¢çš„ç¼–è¾‘ï¼Œæ¢æ¥è™½æœ‰äº›è“¬å¤´å¢é¢çš„å·¥ä½œï¼Œä½†æ˜¯æˆ‘ä»ç„¶å¾ˆäº«å—é‚£äº›ç†¬å¾—åªå‰©ä¸‹é»‘çœ¼åœˆçš„æ—¥å­ï¼Œå› ä¸ºæˆ‘åœ¨å­¦ä¹ ä½¿ç”¨Photoshopã€Flashã€Dreamweaverã€ASPã€PHPã€JSP...ä¸­æ¿€å‘äº†å…´è¶£ï¼Œç„¶åè¶Šèµ°è¶Šè¿œ....</p>
           <p><img src="images/01.jpg"></p>
-          <p>¡°Ú¤Ú¤ÖĞ¸ÃÀ´ÔòÀ´£¬ÎŞ´¦¿ÉÌÓ¡±¡£ </p>
+          <p>â€œå†¥å†¥ä¸­è¯¥æ¥åˆ™æ¥ï¼Œæ— å¤„å¯é€ƒâ€ã€‚ </p>
         </ul>
         <!--    <div class="nextinfos">
-      <p>ÉÏÒ»Æª£º<a href="/">ÇøÖĞÒ½Ò½Ôº¿ªÕ¹Ö¾Ô¸·şÎñ»î¶¯</a></p>
-      <p>ÏÂÒ»Æª£º<a href="/">¹ã°²ÇøÅú×¼¡°µ¥¶ÀÁ½º¢¡±500Àı</a></p>
+      <p>ä¸Šä¸€ç¯‡ï¼š<a href="/">åŒºä¸­åŒ»åŒ»é™¢å¼€å±•å¿—æ„¿æœåŠ¡æ´»åŠ¨</a></p>
+      <p>ä¸‹ä¸€ç¯‡ï¼š<a href="/">å¹¿å®‰åŒºæ‰¹å‡†â€œå•ç‹¬ä¸¤å­©â€500ä¾‹</a></p>
     </div>-->
-        <!-- ¿ÉÓÃÓÚÄÚÈİÄ£°å -->
+        <!-- å¯ç”¨äºå†…å®¹æ¨¡æ¿ -->
 
-        <!-- container´úÂë ½áÊø -->
+        <!-- containerä»£ç  ç»“æŸ -->
       </div>
     </div>
     <div class="blank"></div>
   </div>
-  <!-- container´úÂë ½áÊø -->
+  <!-- containerä»£ç  ç»“æŸ -->
 
   <footer>
     <div class="footer">
       <div class="f_l">
-        <p>All Rights Reserved °æÈ¨ËùÓĞ£º<a href="http://www.yangqq.com">ÑîÇà¸öÈË²©¿Í</a> ±¸°¸ºÅ£ºÊñICP±¸00000000ºÅ</p>
+        <p>All Rights Reserved ç‰ˆæƒæ‰€æœ‰ï¼š<a href="http://www.yangqq.com">æ¨é’ä¸ªäººåšå®¢</a> å¤‡æ¡ˆå·ï¼šèœ€ICPå¤‡00000000å·</p>
       </div>
       <div class="f_r textr">
         <p>Design by DanceSmile</p>
